[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "gradio>=5.9.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.13",
    "langchain-chroma>=0.1.4",
    "langchain-core>=0.3.28",
    "langchain-ollama>=0.2.2",
    "markdownify>=0.14.1",
    "pypandoc>=1.14",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.3.13",
]
